--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </header>
 
 <div class="container-fluid">
-  <div data-component="App">
+  <div data-component="PhonesPage">
     <h3>Content will be here</h3>
   </div>
 </div>
